@@ -46,6 +46,9 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.0/
    of the serializer (ticket #146).
  * Assigning to a variable named `data` in a Python code block no longer
    breaks context lookup.
+ * The `Stream.render` now accepts an optional `out` parameter that can be
+   used to pass in a writable file-like object to use for assembling the
+   output, instead of building a big string and returning it.
 
 
 Version 0.4.4
